add simple login&register function about user
